* Tue May 15 2007 Jesse Keating <jkeating@redhat.com>
- Don't quote ISO label, not running mkisofs in shell

* Fri Apr 06 2007 Jesse Keating <jkeating@redhat.com>
- Fix comments in config file

* Mon Apr 02 2007 Jesse Keating <jkeating@redhat.com>
- Remove incompatible fc6 config files
- Update default config file with comments / new options
- Update comps file

* Mon Mar 26 2007 Jesse Keating <jkeating@redhat.com>
- Enable source iso building again.

* Fri Mar 23 2007 Jesse Keating <jkeating@redhat.com>
- Don't try a rescue if the script doesn't exist (prarit)

* Thu Mar 22 2007 Jesse Keating <jkeating@redhat.com>
- Pass flavor off to buildinstall if it is set (wwoods)

* Fri Mar 16 2007 Jesse Keating <jkeating@redhat.com>
- Fix a logic flaw in the depsolving loop

* Thu Mar 15 2007 Jesse Keating <jkeating@redhat.com>
- Use yum's built in exclude handling
- Use yum's built in conditional handling for things from comps
- Do excludes before group handling.
- Get all potential matches for deps, let install time figure
  the best one to use.
- Work around false positive 'unmatched' packages (globs are fun)
- Change how depsolving is done
  - Get all potential matches for a dep, instead of our 'best'
    our 'best' may not be the same as install time best.
  - Remove anaconda code, use direct yum functions to get deps
  - Use a True/False flag to depsolve instead of iterating over
    a dict.
  - Log what packages are being added for which reasons.

* Tue Mar 14 2007 Jesse Keating <jkeating@redhat.com>
- Do things faster/smarter if we've only asked for one disc

* Tue Mar 13 2007 Jesse Keating <jkeating@redhat.com>
- log the rpm2cpio stuff for release notes
- correctly capture errors from subprocess

* Wed Mar 07 2007 Jesse Keating <jkeating@redhat.com>
- Call createrepo ourselves for the tree, not buildinstall's job

* Tue Mar 06 2007 Jesse Keating <jkeating@redhat.com>
- Convert from commands to subprocess for things we call out
