@@ -1,5 +1,6 @@
 * Tue May 15 2007 Jesse Keating <jkeating@redhat.com>
 - Don't quote ISO label, not running mkisofs in shell
+- Apply sparc patches (spot)
 
 * Fri Apr 06 2007 Jesse Keating <jkeating@redhat.com>
 - Fix comments in config file
